WIP: improve coverage
