# api/runtimes.py
@@ -6,7 +6,6 @@ from models import RoleEnum
 from models import AvailableOption
 from utils import oidc_require_role, build_query_filters
 from sqlalchemy.exc import StatementError
-from marshmallow.exceptions import ValidationError
 
 
 # GET /runtimes
@@ -31,33 +30,9 @@ def post(runtime=None):
     # runtime could come from PUT
     if runtime is None:
         runtime_data = request.get_json()
+        data = runtime_schema.load(runtime_data).data
 
-        # ensure uri_template is correct
-        if 'uri_template' in runtime_data \
-                and runtime_data['uri_template'] is not None:
-            try:
-                variables = runtime_data['uri_template']['variables']
-                for variable in variables:
-                    length = variable['length']
-                    unique = variable['unique']
-                    src = variable['src']
-                    if unique and src == 'random':
-                        msg = "Uniqueness is not taken into account "\
-                              "for a random variable."
-                        raise BadRequest(description=msg)
-                    if unique and length < 16 and src == 'capsule':
-                        msg = "Uniqueness of a variable required "\
-                              "a length greater or equal to 16."
-                        raise BadRequest(description=msg)
-            except KeyError:
-                raise BadRequest(description="Refer to specifications for "
-                                             "uri_template schema")
-        try:
-            data = runtime_schema.load(runtime_data).data
-        except ValidationError:
-            raise BadRequest("Please, refer to the API specification.")
-
-        if "available_opts" in data:
+        if "available_opts" in data and len(data['available_opts']) > 0:
             available_opts = AvailableOption.create(data["available_opts"])
             data.pop("available_opts")
             runtime = Runtime(**data, available_opts=available_opts)
@@ -79,7 +54,7 @@ def get(runtime_id):
     try:
         runtime = Runtime.query.get(runtime_id)
     except StatementError:
-        raise BadRequest(description=f"'{runtime_id}' is not a valid id.'")
+        raise BadRequest(description=f"'{runtime_id}' is not a valid id.")
 
     if runtime is None:
         raise NotFound(description=f"The requested runtime '{runtime_id}' "
@@ -95,38 +70,27 @@ def get(runtime_id):
 @oidc_require_role(min_role=RoleEnum.superadmin)
 def put(runtime_id):
     runtime_data = request.get_json()
-    data = runtime_schema.load(runtime_data).data
-
     try:
         runtime = Runtime.query.get(runtime_id)
     except StatementError:
-        raise BadRequest(description=f"'{runtime_id}' is not a valid id.'")
+        raise BadRequest(description=f"'{runtime_id}' is not a valid id.")
 
     if runtime is None:
         return post(runtime=runtime)
+
+    data = runtime_schema.load(runtime_data).data
 
     runtime.desc = data["desc"]
     runtime.fam = data["fam"]
     runtime.name = data["name"]
     runtime.runtime_type = data["runtime_type"]
+
+    runtime.uri_template = None
     if 'uri_template' in data:
-        variables = data['uri_template']['variables']
-        for variable in variables:
-            length = variable['length']
-            unique = variable['unique']
-            src = variable['src']
-            if unique and src == 'random':
-                raise BadRequest(description="Uniqueness is not taken "
-                                             "into account for a random "
-                                             "variable.")
-            if unique and length < 16 and src == 'capsule':
-                raise BadRequest(description="Uniqueness of a variable "
-                                             "required a length greater "
-                                             "or equal to 16.")
         runtime.uri_template = data['uri_template']
 
-    delattr(runtime, "available_opts")
-    if "available_opts" in data:
+    runtime.available_opts = []
+    if "available_opts" in data and len(data['available_opts']) > 0:
         available_opts = AvailableOption.create(data["available_opts"])
         runtime.available_opts = available_opts
 
@@ -140,7 +104,7 @@ def delete(runtime_id):
     try:
         runtime = Runtime.query.get(runtime_id)
     except StatementError:
-        raise BadRequest(description=f"'{runtime_id}' is not a valid id.'")
+        raise BadRequest(description=f"'{runtime_id}' is not a valid id.")
 
     if runtime is None:
         raise NotFound(description=f"The requested runtime '{runtime_id}' "
